force-app/main/default/objects/User/fields/AD_UserName__c.field-meta.xml
<CustomField>
    <fullName>AD_UserName__c</fullName>
    <description>This field on user will be used to store User&apos;s Active Directory username</description>
    <label>AD UserName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>