force-app/main/default/objects/User/fields/Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>Cost_Center__c</fullName>
    <description>To capture the Cost Center for billable activity</description>
    <label>Cost Center</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>