force-app/main/default/objects/User/fields/Delegated_Approver_Email__c.field-meta.xml
<CustomField>
    <fullName>Delegated_Approver_Email__c</fullName>
    <description>Field to hold Delegated Approver&apos;s Email</description>
    <label>Delegated Approver Email</label>
    <type>Email</type>
</CustomField>