force-app/main/default/objects/User/fields/Delegated_Approver_Name__c.field-meta.xml
<CustomField>
    <fullName>Delegated_Approver_Name__c</fullName>
    <description>Field to hold Delegated Approver Name</description>
    <label>Delegated Approver Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>