force-app/main/default/objects/User/fields/Download_Field_Service_Users__c.field-meta.xml
<CustomField>
    <fullName>Download_Field_Service_Users__c</fullName>
    <description>Checkbox Field to store if the User is a Field Service or Field Engineer</description>
    <formula>OR(Profile.Name = &quot;Field Service&quot;, Profile.Name = &quot;SVMX PS - Field Engineer&quot;)</formula>
    <label>Download Field Service Users</label>
    <type>Checkbox</type>
</CustomField>