force-app/main/default/objects/User/fields/ExemptFromValidation__c.field-meta.xml
<CustomField>
    <fullName>ExemptFromValidation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used  to check if for a particular User the validation rule can byPass</description>
    <label>ExemptFromValidation</label>
    <type>Checkbox</type>
</CustomField>