force-app/main/default/objects/User/fields/openq__Functional_Area__c.field-meta.xml
<CustomField>
    <fullName>openq__Functional_Area__c</fullName>
    <label>Functional Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Med Info</fullName>
            </value>
            <value>
                <fullName>MSL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>