force-app/main/default/objects/User/fields/openq__Group_Type__c.field-meta.xml
<CustomField>
    <fullName>openq__Group_Type__c</fullName>
    <label>Group Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Front End Admin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>