force-app/main/default/objects/User/fields/Out_of_Office__c.field-meta.xml
<CustomField>
    <fullName>Out_of_Office__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to denote that user is not available.</description>
    <label>Out of Office</label>
    <type>Checkbox</type>
</CustomField>