force-app/main/default/objects/User/fields/PartnerRegion__c.field-meta.xml
<CustomField>
    <fullName>PartnerRegion__c</fullName>
    <description>To capture Account territory region linked to contact of partner users </description>
    <formula>Contact.Account.Territory_Region__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Region</label>
    <type>Text</type>
</CustomField>