force-app/main/default/objects/User/fields/PartnerType__c.field-meta.xml
<CustomField>
    <fullName>PartnerType__c</fullName>
    <description>To capture channel partner type</description>
    <formula>TEXT(Contact.Account.Channel_Partner_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Type</label>
    <type>Text</type>
</CustomField>