force-app/main/default/objects/User/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>This field is used to indicate where the user is located</description>
    <inlineHelpText>This field is used to indicate where the user is located</inlineHelpText>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Region</valueSetName>
    </valueSet>
</CustomField>