force-app/main/default/objects/User/fields/SVMXC__Dispatch_Console_Settings__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Dispatch_Console_Settings__c</fullName>
    <label>Dispatch Console Settings</label>
    <length>64000</length>
    <type>LongTextArea</type>
</CustomField>