force-app/main/default/objects/User/fields/SVMXC__FaceTime_ID__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__FaceTime_ID__c</fullName>
    <description>User&apos;s FaceTime login ID. Used to make FaceTime calls in ServiceMax iPad Client. If this is left blank, user&apos;s phone number and email are used for the call.</description>
    <inlineHelpText>Enter this user&apos;s FaceTime login ID if available. This is used to make FaceTime calls in ServiceMax iPad Client. If this is left blank, user&apos;s phone number and email are used for the call.</inlineHelpText>
    <label>FaceTime ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>