force-app/main/default/objects/User/fields/Tech__c.field-meta.xml
<CustomField>
    <fullName>Tech__c</fullName>
    <description>Field to store tech</description>
    <label>Tech</label>
    <length>44</length>
    <type>Text</type>
</CustomField>