force-app/main/default/objects/User/fields/Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>Unique_Id__c</fullName>
    <description>Unique id for a person in AD. Filled using Sailpoint integration. Can&apos;t be edited by anyone except GIS Provisioning and Identity Integration User.</description>
    <externalId>true</externalId>
    <label>Unique Id</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>