force-app/main/default/objects/User/fields/User_Active_until__c.field-meta.xml
<CustomField>
    <fullName>User_Active_until__c</fullName>
    <description>Field to store User active date</description>
    <label>User Active until</label>
    <type>Date</type>
</CustomField>