force-app/main/default/objects/User/fields/User_Profile_Name__c.field-meta.xml
<CustomField>
		<fullName>User_Profile_Name__c</fullName>
        <description>Profile Name of the User. In Lightning,Profile name value for System Administrator profile is PT1. Hence PT1 check is added in formula</description>
        <formula>IF(CONTAINS(Profile.Name,&apos;PT1&apos;),&apos;System Administrator&apos;,Profile.Name)</formula>
        <label>User Profile Name</label>
        <type>Text</type>
</CustomField>