force-app/main/default/objects/User/validationRules/Check_Temporary_Access_Till_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Temporary_Access_Till_Date</fullName>
    <active>true</active>
    <description>Check Temporary Access Till Date &gt;= Today</description>
    <errorConditionFormula>Temporary_Access_Till_Date__c &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>Temporary_Access_Till_Date__c</errorDisplayField>
    <errorMessage>Please enter a future date.</errorMessage>
</ValidationRule>