force-app/main/default/objects/User/validationRules/Check_User_Active_until.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_User_Active_until</fullName>
    <active>true</active>
    <description>Check User Active until &gt;= Today</description>
    <errorConditionFormula>User_Active_until__c &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>User_Active_until__c</errorDisplayField>
    <errorMessage>Please enter a future date.</errorMessage>
</ValidationRule>