force-app/main/default/objects/User/listViews/ActiveUsers.listView-meta.xml
<ListView>
    <fullName>ActiveUsers</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.TITLE</columns>
    <columns>EMPLOYEE_NUMBER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.USERTYPE</field>
        <operation>equals</operation>
        <value>S</value>
    </filters>
    <filters>
        <field>CORE.USERS.COMPANY_NAME</field>
        <operation>notEqual</operation>
        <value>Dummy,Integration,Deloitte</value>
    </filters>
    <label>Active Users</label>
    <language>en_US</language>
</ListView>