force-app/main/default/objects/User/listViews/ActiveUsersAMEAGC.listView-meta.xml
<ListView>
    <fullName>ActiveUsersAMEAGC</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>KNOWLEDGE_USER</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.USER_ROLE.NAME</field>
        <operation>contains</operation>
        <value>China,AMEA</value>
    </filters>
    <label>Active Users AMEA and GC</label>
    <language>en_US</language>
</ListView>