force-app/main/default/objects/User/listViews/GISNonAdminUsers.listView-meta.xml
<ListView>
    <fullName>GISNonAdminUsers</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CREATED_BY_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>GIS Non Admin</value>
    </filters>
    <label>GIS Non Admin Users</label>
    <language>en_US</language>
</ListView>