force-app/main/default/objects/User/listViews/LastModified.listView-meta.xml
<ListView>
    <fullName>LastModified</fullName>
    <columns>FULL_NAME</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Last Modified</label>
    <language>en_US</language>
</ListView>